--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,29 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 
+[/Script/Engine.RendererSettings]
+r.AllowStaticLighting=False
+
+r.GenerateMeshDistanceFields=True
+
+r.DynamicGlobalIlluminationMethod=1
+
+r.ReflectionMethod=1
+
+r.SkinCache.CompileShaders=True
+
+r.RayTracing=True
+
+r.Shadow.Virtual.Enable=1
+
+r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
+
+r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
+
+r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
+DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 -D3D12TargetedShaderFormats=PCD3D_SM5
 +D3D12TargetedShaderFormats=PCD3D_SM6
@@ -32,23 +54,6 @@ CompressionQualityModifier=1.000000
 AutoStreamingThreshold=0.000000
 SoundCueCookQualityIndex=-1
 
-[/Script/Engine.RendererSettings]
-r.Mobile.EnableNoPrecomputedLightingCSMShader=True
-
-r.GenerateMeshDistanceFields=True
-
-r.DynamicGlobalIlluminationMethod=1
-
-r.ReflectionMethod=1
-
-r.Shadow.Virtual.Enable=1
-
-r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
-
-r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
-
-r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
-
 [/Script/LinuxTargetPlatform.LinuxTargetSettings]
 -TargetedRHIs=SF_VULKAN_SM5
 +TargetedRHIs=SF_VULKAN_SM6
@@ -74,7 +79,7 @@ FontDPI=72
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=2FC3D0984D08E7C2CEDD26B8F6EECC1B
+SecurityToken=DFBDFD6543E2A2E82B9B2FA1AE0C01E7
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
